FTB-Community/force-app/main/default/objects/FTB_CMT_FieldMapper__mdt/fields/FTB_CharacterLink__c.field-meta.xml
<CustomField>
    <fullName>FTB_CharacterLink__c</fullName>
    <label>Character link</label>
    <length>40</length>
    <type>Text</type>
</CustomField>