FTB-Community/force-app/main/default/objects/FTB_CMT_FieldMapper__mdt/fields/FTB_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>FTB_ObjectName__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>