FTB-Community/force-app/main/default/objects/FTB_CMT_FieldMapper__mdt/fields/FTB_Service__c.field-meta.xml
<CustomField>
    <fullName>FTB_Service__c</fullName>
    <label>Service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>